<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutUcc">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="43dp"
        android:text="@string/title_Union"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="493dp"
        android:text="@string/txtUnionAddress"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="538dp"
        android:text="@string/txtUnion_Phone"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="494dp" />

    <ImageView
        android:id="@+id/imgUccLogo"
        android:layout_width="404dp"
        android:layout_height="453dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:contentDescription="@string/description_Union"
        app:srcCompat="@drawable/union_cc_img" />

</RelativeLayout>