<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPrinceton">

    <TextView
        android:id="@+id/titlePrinceton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="18dp"
        android:text="@string/title_Princeton"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/img_Princeton"
        android:layout_width="329dp"
        android:layout_height="404dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/description_Princeton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/princeton_logo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="511dp"
        android:text="@string/txtPrincetonAddress"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="532dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="83dp"
        android:text="@string/txtPrinceton_Phone"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="589dp" />
</RelativeLayout>